# maraudersmap-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  FLY_DEPLOYMENT.md  Makefile  README.md  entrypoint.sh  fly.dev.toml  fly.prod.toml  fly.toml  pyproject.toml
.github/workflows/: flyio_deploy.yaml  flyio_deploy_dev.yaml  flyio_deploy_prod.yaml  flyio_pr_preview.yaml
maraudersmap/: .env.template  ascii.py  base.env  config.py  crud.py  database.py  extra_types.py  main.py  models.py  schemas.py
maraudersmap/alembic/: env.py
maraudersmap/alembic/versions/: 109f30cf68bd_added_unlock_location_to_quest.py  256308233b41_added_itemownership_user_relation.py  2823eb3b2f6f_added_user_event_and_their_relations.py  29268ba49dbb_add_itemtype_and_unlockmethod.py  29fef2b3718e_added_quest_self_reference.py  2a7adabcae52_add_missing_primary_key_to_.py  2edb3ecd6df9_make_username_unique.py  557fcd064859_fixed_eventparticipation_primary_key_.py  59f4ddda07bd_add_voucher_item_type.py  6115668980db_move_user_location_and_remove_extra_.py  64cf80cfd867_rename_quest_id_to_event_id_in_.py  71cc79fd09c4_prepare_item_type_and_unclock_method.py  8ebf59d2523f_add_items_and_pois.py  97684545f321_add_quest_completion_unlock_method.py  a8a4fa746068_add_missing_primary_key_to_.py  ab77a76d3c4e_itemownership_with_quest_item_foreign_.py  bf1c9e8dd140_fixed_questparticipation_primary_key_.py  c0fc943b42f7_updated_queststatus_type.py  d8cdf6fca749_add_location_to_item.py  e1f061b21f93_added_quests_items_questitems.py  (+1 more)
maraudersmap/database/: base.py  database.py  seed.sql
