[tool.poetry]
name = "maraudersmap"
version = "0.1.0"
description = "Backend for the Marauder’s Map Project"
authors = ["Mathias Oterhals Myklebust <mathias@oterbust.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
